--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,29 @@ li {
   margin-bottom: 10px;
 }
 
-/* Pseudo-classes ------------------ */
+/* Links ------------------ */
+.callout {
+  font-size: 1.25em;
+  border-bottom: 3px solid;
+  padding: 0 9px 3px;
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.arrow {
+  width: 50px;
+  margin-top: 150px;
+  transition: all 0.5s;
+}
+
+.arrow:hover {
+  transform: translate(0, 8px);
+}
 
 a:link {
-  color: rgb(255, 169, 73);
+  color: lightblue;
   text-decoration: none;
+  transition: all 0.3s;
 }
 
 a:visited {
@@ -78,8 +96,6 @@ a:visited {
 a:hover {
   color: rgba(255, 169, 73);
   transform: scale(1.1);
-  transition: transform 0.3s,
-              color .25s;
 }
 
 a:active {
@@ -128,14 +144,6 @@ a:active {
 	padding-bottom: 40px;
 }
 
-.callout {
-  font-size: 1.25em;
-  border-bottom: 3px solid;
-  padding: 0 9px 3px;
-  margin-top: 20px;
-  display: inline-block;
-}
-
 .main-footer {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -170,12 +178,6 @@ a:active {
   border-radius: 20px;
 }
 
-.arrow {
-  width: 50px;
-  margin-top: 150px;
-}
-
-
 /* Floated Columns ------------------ */
 
 .resorts,
@@ -200,11 +202,6 @@ a:active {
 .buffet {
   float: right;
 }
-
-/* .weather
-.buffet {
-  overflow: auto;
-} */
 
 /* Float Clearfix ------------------ */
 
