--- a/css/subpage.css
+++ b/css/subpage.css
@@ -132,7 +132,7 @@ blockquote {
 @media (max-width: 1024px) {
 
   .subheader{
-    padding:  calc(50vh - 208px) 30px 0;
+    padding:  25vh 30px 0;
     margin-bottom: 40px;
   }
 
